--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint": "^9.12.0",
     "globals": "^15.11.0",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "live-server": "^1.2.0",
     "prettier": "^3.3.3",
     "sass": "^1.54.8"
