--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "format": "prettier --write .",
     "lint": "eslint .",
     "prettier-check": "prettier --check .",
-    "test": "jest --coverage"
+    "test": "pm run test-unit",
+    "test-e2e": "cypress open",
+    "test-e2e-cli": "cypress run",
+    "test-e2e-report": "cypress run --reporter mochawesome"
   },
   "keywords": [],
   "author": "Noroff",
@@ -20,6 +23,8 @@
     "@eslint/js": "^9.12.0",
     "babel-jest": "^29.7.0",
     "eslint": "^9.12.0",
+    "eslint-plugin-cypress": "^4.0.0",
+    "eslint-plugin-jest": "^28.8.3",
     "globals": "^15.11.0",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
